[tool.poetry]
name = "acfunsdk-ws"
version = "0.1.0"
description = "acfunsdk - websocket"
license = "MIT"
authors = ["dolacmeo <dolacmeo@gmail.com>"]
maintainers = []
readme = "README.md"
homepage = "https://pypi.org/project/acfunsdk-ws/"
repository = "https://github.com/dolaCmeo/acfunsdk-ws"
documentation = "https://github.com/dolaCmeo/acfunsdk-ws"
keywords = ["acfun", "sdk", "acfunsdk", "unofficeical", "websocket"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: JavaScript",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries",
]
packages = [{include = "acfunsdk_ws"}]


[tool.poetry.dependencies]
python = "^3.8"
acfunsdk = "^0.9.7"
websocket-client = "^1.4"
pycryptodome = "^3.15"
protobuf = "==3.20.1"
proto-plus = "==1.22.1"
filetype = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = 'aliyun.mirrors'
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dolaCmeo/acfunsdk-ws/issues"
